--- a/i3/picom.conf
+++ b/i3/picom.conf
@@ -184,16 +184,16 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
- # blur-method = "kernel";
-# blur-size = 12
+blur-method = "kawase";
+blur-size = 12
+blur-strength = 2;
 #
 # blur-deviation = false
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
-#
-# blur-background = false
+blur-background = true
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
@@ -212,12 +212,12 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
    #blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ''
-# blur-kern = "3x3box";
+#blur-kern = "3x3box";
 blur-kern = "15,15,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,";
 
 
 # Exclude conditions for background blur.
-# blur-background-exclude = []
+#blur-background-exclude = []
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
@@ -239,8 +239,8 @@ blur-background-exclude = [
 backend = "glx";
 
 # Enable/disable VSync.
-#vsync = false;
-vsync = false;
+#vsync = false; 
+vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
