--- a/i3/picom.conf
+++ b/i3/picom.conf
@@ -111,7 +111,7 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-fading = false
+fading = true
 # fading = true
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
@@ -119,14 +119,14 @@ fading = false
 fade-in-step = 0.028;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
-fade-out-step = 0.08;
+fade-out-step = 0.03
+# fade-out-step = 0.08;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 8
+fade-delta = 5
 
 # Specify a list of conditions of windows that should not be faded.
-# fade-exclude = []
+#  fade-exclude = []
 
 # Do not fade on window open/close.
 no-fading-openclose = false
@@ -184,7 +184,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "kawase";
+blur-method = "dual_kawase";
 blur-size = 12
 blur-strength = 2;
 #
