--- a/i3/picom.conf
+++ b/i3/picom.conf
@@ -184,8 +184,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "dual_kawase";
-blur-size = 12
+blur-method = "kernel";
+blur-size = 20;
 blur-strength = 2;
 #
 # blur-deviation = false
