--- a/leftwm/themes/current/polybar.config
+++ b/leftwm/themes/current/polybar.config
@@ -34,7 +34,7 @@ bottom = true
 ;offset-y = ${env:y}
 ;width = 100%
 height = 27
-fixed-center = false
+fixed-center = true
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3
@@ -50,7 +50,7 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = wuncon siji:pixelsize=10;1
 modules-left = ewmh
 modules-center = xwindow
-modules-right = xbacklight pulseaudio memory cpu wlan eth battery date powermenu
+modules-right = mpd xbacklight pulseaudio memory cpu wlan eth battery date 
 tray-position = right
 tray-padding = 2
 cursor-click = pointer
@@ -215,7 +215,7 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface = wlo1
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -253,17 +253,17 @@ format-disconnected =
 
 [module/date]
 type = internal/date
-date =    %%{F#99}%m/%d/%Y%%{F-}  %%{F#fff}%I:%M %p%{F-}
-date-alt = %%{F#fff}%A, %B %d, %Y  %%{F#fff}%I:%M:%{F#666}%%{F#fba922}%S%%{F-} %p
-;interval = 5
-;date =
-;date-alt = " %Y-%m-%d"
-;time = %H:%M
-;time-alt = %H:%M:%S
-;format-prefix = 
-;format-prefix-foreground = ${colors.foreground-alt}
-;format-underline = #0a6cf5
-;label = %date% %time%
+;date =    %%{F#99}%m/%d/%Y%%{F-}  %%{F#fff}%I:%M %p%{F-}
+;date-alt = %%{F#fff}%A, %B %d, %Y  %%{F#fff}%I:%M:%{F#666}%%{F#fba922}%S%%{F-} %p
+interval = 5
+date =
+date-alt = " %Y-%m-%d"
+time = %H:%M
+time-alt = %H:%M:%S
+format-prefix = 
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #0a6cf5
+label = %date% %time%
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -322,7 +322,7 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
-battery = BAT0
+battery = BAT1 
 adapter = AC
 full-at = 98
 
