--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -124,9 +124,9 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+#device:epic-mouse-v1 {
+#    sensitivity = -0.5
+#}
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -141,11 +141,12 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, exec, $menu
+bind = $mainMod, F, fullscreen,
 bind = $mainMod, R, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
