--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,7 +22,7 @@ exec-once = waybar
 # Set programs that you use
 $terminal = alacritty
 $fileManager = nautlis
-$menu = wofi --show drun
+$menu = rofi -show combi -combi-modi window,drun,run,ssh,rofi-power-menu
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -74,8 +74,8 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 5
+        passes = 2
         
         vibrancy = 0.1696
     }
@@ -191,6 +191,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
 
 # audio
 binde = , XF86AudioRaiseVolume, exec, pactl set-sink-mute @DEFAULT_SINK@ false ; pactl set-sink-volume @DEFAULT_SINK@ +5%
