--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -4,23 +4,42 @@ program = "/bin/fish"
 [window]
 decorations = "none"
 opacity = 0.9
+[colors.primary]
+background = '#191724'
+foreground = '#e0def4'
+
+[colors.cursor]
+text = '#e0def4'
+cursor = '#524f67'
+
+[colors.vi_mode_cursor]
+text = '#e0def4'
+cursor = '#524f67'
+
+[colors.selection]
+text = '#e0def4'
+background = '#403d52'
 
 [colors.normal]
-black =   "#1d1f21"
-red =     "#cc6666"
-green =   "#b5bd68"
-yellow =  "#f0c674"
-blue =    "#81a2be"
-magenta = "#b294bb"
-cyan =    "#8abeb7"
-white =   "#c5c8c6"
+black = '#26233a'
+red = '#eb6f92'
+green = '#31748f'
+yellow = '#f6c177'
+blue = '#9ccfd8'
+magenta = '#c4a7e7'
+cyan = '#ebbcba'
+white = '#e0def4'
 
 [colors.bright]
-black =    '#666666'
-red =      '#d54e53'
-green =    '#b9ca4a'
-yellow =   '#e7c547'
-blue =     '#7aa6da'
-magenta =  '#c397d8'
-cyan =     '#70c0b1'
-white =    '#eaeaea'
+black = '#6e6a86'
+red = '#eb6f92'
+green = '#31748f'
+yellow = '#f6c177'
+blue = '#9ccfd8'
+magenta = '#c4a7e7'
+cyan = '#ebbcba'
+white = '#e0def4'
+
+[colors.hints]
+start = {foreground = '#908caa', background = '#1f1d2e' }
+end = { foreground = '#6e6a86', background = '#1f1d2e' }
