--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -31,8 +31,8 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 # fuck you nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = GBM_BACKEND,nvidia-drm
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
