added hyprpaper config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,32 +8,33 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=desc:Thermotrex Corporation TL156VDXP0101, 1920x1080@300,auto,1
+monitor=eDP-1,preferred,auto,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 exec-once = waybar
+exec-once = hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = kitty
 $fileManager = nautlis
-$menu = rofi -show combi -combi-modi window,drun,run,ssh,rofi-power-menu
+$menu = wofi --show drun,run
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # fuck you nvidia
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
+#env = LIBVA_DRIVER_NAME,nvidia
+#env = XDG_SESSION_TYPE,wayland
 # env = GBM_BACKEND,nvidia-drm
 # env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
+#env = WLR_NO_HARDWARE_CURSORS,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -133,7 +134,8 @@ misc {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+windowrulev2 = suppressevent maximize, class:.*
+windowrulev2 = forceinput, class:.*
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
