--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -2,7 +2,7 @@ preload = /home/aman/Pictures/wallpapers/wallhaven-gpl8d3.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = eDP-1,/home/aman/Pictures/wallpapers/wallhaven-gpl8d3.jpg
+wallpaper = ,/home/aman/Pictures/wallpapers/wallhaven-gpl8d3.jpg
 
 #enable splash text rendering over the wallpaper
 splash = true
