--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,9 @@ italic_font      auto
 bold_italic_font auto
 background_opacity 0.85
 shell_integration enabled
+input_delay 0
+repaint_delay 2
+sync_to_monitor no
 
 shell fish
 
