exec dunst in i3

--- a/i3/config
+++ b/i3/config
@@ -240,3 +240,5 @@ exec picom --config /home/aman/.config/i3/picom.conf
 exec nitrogen --restore
 
 exec /usr/libexec/polkit-gnome-authentication-agent-1
+
+exec dunst
