--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,preferred,auto,1
+monitor=eDP-1,1920x1080@300,auto,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -30,11 +30,8 @@ env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # fuck you nvidia
-#env = LIBVA_DRIVER_NAME,nvidia
-#env = XDG_SESSION_TYPE,wayland
-# env = GBM_BACKEND,nvidia-drm
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-#env = WLR_NO_HARDWARE_CURSORS,1
+env = NVD_BACKEND,direct
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -110,7 +107,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
@@ -135,7 +132,7 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.*
-windowrulev2 = forceinput, class:.*
+#windowrulev2 = forceinput, class:.*
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
