fixes cursor issues in hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -65,6 +65,10 @@ general {
     allow_tearing = false
 }
 
+cursor {
+    no_hardware_cursors = true
+}
+
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
