fixes to hyprland

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,12 +1,11 @@
-preload = /home/aman/Pictures/wallpapers/wallhaven-gpl8d3.jpg
+preload = /home/aman/Pictures/wallpapers/wallhaven-6d1zll.png
 #if more than one preload is desired then continue to preload other backgrounds
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = ,/home/aman/Pictures/wallpapers/wallhaven-gpl8d3.jpg
+wallpaper = ,/home/aman/Pictures/wallpapers/wallhaven-6d1zll.png
 
 #enable splash text rendering over the wallpaper
 splash = true
 splash_offset = 0.0
 
-#fully disable ipc
-ipc = off
+ipc = true
