--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,7 +24,7 @@ exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautlis
-$menu = wofi --show drun,run
+$menu = wofi --show drun,run,dmenu
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -32,7 +32,7 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # fuck you nvidia
 env = NVD_BACKEND,direct
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
+#env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
