removed vim-tmux-navigator

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,6 +16,7 @@ monitor=eDP-1,1920x1080@300,auto,1
 # Execute your favorite apps at launch
 exec-once = waybar
 exec-once = hyprpaper
+exec-once = dunst
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
 
 # Source a file (multi-file configs)
