fixes to waybar config

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -5,7 +5,7 @@ preload = /home/aman/Pictures/wallpapers/wallhaven-6d1zll.png
 wallpaper = ,/home/aman/Pictures/wallpapers/wallhaven-6d1zll.png
 
 #enable splash text rendering over the wallpaper
-splash = true
+splash = false
 splash_offset = 0.0
 
 ipc = true
