--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = dunst
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
+exec-once = hypridle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -138,6 +139,7 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.*
+windowrulev2 = move cursor 0 10, class:^(waybar)$, floating:1
 #windowrulev2 = forceinput, class:.*
 
 
@@ -189,6 +191,8 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
+bind = $mainMod SHIFT, L, exec, hyprlock # lock screen
+
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -211,3 +215,5 @@ binde = , XF86MonBrightnessUp , exec, light -A 10 && light -O
 binde = , XF86MonBrightnessDown , exec, light -U 10 && light -O
 binde = , XF86KbdBrightnessUp, exec, light -S 100 -s sysfs/leds/spi::kbd_backlight
 binde = , XF86KbdBrightnessDown, exec, light -S 0   -s sysfs/leds/spi::kbd_backlight
+
+bindl= , switch:on:Lid Switch, exec, hyprlock && systemctl suspend
