--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -5,13 +5,9 @@
 "margin-bottom":0,
 "margin-top":0,
 
-"modules-left": ["custom/logo", "hyprland/workspaces"],
-"modules-center": ["hyprland/window"],
+"modules-left": [ "hyprland/workspaces"],
+"modules-center": [],
 "modules-right":  ["cpu","memory","network", "pulseaudio","backlight","battery","clock", "tray"],
-"custom/logo": {
-  "format": "",
-  "tooltip": false
-},
 
 "battery": {
   "states": {
@@ -25,8 +21,10 @@
   "format-icons": ["", "", "", "", "", "", ""]
 },
 "hyprland/workspaces": {
-     "sort-by-name": true,
-     "on-click": "activate"
+    "on-scroll-up": "hyprctl dispatch workspace -1",
+    "on-scroll-down": "hyprctl dispatch workspace +1",
+    "sort-by-name": true,
+    "on-click": "activate"
 },
 "hyprland/window": {
     "max-length": 200,
