--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -28,7 +28,8 @@ listener {
     on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
 
-listener {
-    timeout = 500                                
-    on-timeout = systemctl suspend                # suspend pc
-}
+# removing this suspend because nvidia doesn't wake from sleep in wayland :pepesad:
+#listener {
+#    timeout = 500                                
+#    on-timeout = systemctl suspend                # suspend pc
+#}
