fixes to hyprland

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -28,8 +28,7 @@ listener {
     on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
 
-# removing this suspend because nvidia doesn't wake from sleep in wayland :pepesad:
-#listener {
-#    timeout = 500                                
-#    on-timeout = systemctl suspend                # suspend pc
-#}
+listener {
+    timeout = 500                                
+    on-timeout = systemctl suspend                # suspend pc
+}
