--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
-preload = /home/aman/Pictures/wallpapers/wallhaven-6d1zll.png
+preload = /home/aman/Pictures/wallpapers/wallhaven-d61yjo.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = ,/home/aman/Pictures/wallpapers/wallhaven-6d1zll.png
+wallpaper = ,/home/aman/Pictures/wallpapers/wallhaven-d61yjo.jpg
 
 #enable splash text rendering over the wallpaper
 splash = false
