--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,1920x1080@300,auto,1
+monitor = , 2880x1800@120.00Hz, auto, 1.5
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -17,13 +17,14 @@ monitor=eDP-1,1920x1080@300,auto,1
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = dunst
-exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
+$editor = nvim
 $terminal = kitty
 $fileManager = nautlis
 $menu = wofi --show drun,run,dmenu
@@ -31,10 +32,13 @@ $menu = wofi --show drun,run,dmenu
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+env= GTK_THEME,Adwaita:dark
 
 # fuck you nvidia
 env = NVD_BACKEND,direct
-#env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -68,8 +72,19 @@ general {
     allow_tearing = false
 }
 
+gestures {
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
+}
+
 cursor {
     no_hardware_cursors = true
+}
+
+experimental {
+    #wide_color_gamut = true
+    hdr = true
+    xx_color_management_v4 = true
 }
 
 decoration {
@@ -85,10 +100,12 @@ decoration {
         vibrancy = 0.1696
     }
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled = true
+        range = true
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 }
 
 animations {
@@ -125,6 +142,7 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
+    vfr = true
 }
 
 # Example per-device config
