fixes to fish config and added trouble.nvim

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = , 2880x1800@120.00Hz, auto, 1.5
+monitor = , 2880x1800@120.00Hz, auto, 1.5, bitdepth, 10, cm, hdr
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -79,12 +79,6 @@ gestures {
 
 cursor {
     no_hardware_cursors = true
-}
-
-experimental {
-    #wide_color_gamut = true
-    hdr = true
-    xx_color_management_v4 = true
 }
 
 decoration {
