minor fixes for tmux and hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = , 2880x1800@120.00Hz, auto, 1.5, bitdepth, 10, cm, hdr
+monitor = eDP-1, 2880x1800@120, auto, 1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -50,11 +50,14 @@ input {
 
     follow_mouse = 1
 
+    accel_profile = "flat"
+
     touchpad {
         natural_scroll = false
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    left_handed = false
 }
 
 general {
@@ -69,7 +72,7 @@ general {
     layout = dwindle
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    allow_tearing = true
 }
 
 gestures {
@@ -78,7 +81,7 @@ gestures {
 }
 
 cursor {
-    no_hardware_cursors = true
+    no_hardware_cursors = false
 }
 
 decoration {
