--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,9 +8,15 @@ set-option -g default-shell /usr/bin/fish
 # set vi-mode
 set-window-option -g mode-keys vi
 # keybindings
+
+set-option -s set-clipboard off
+bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi V send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
 
 set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 set -g @rose_pine_host 'on'
