--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -2,10 +2,10 @@ background {
   monitor = 
   path = /home/aman/Pictures/wallpapers/wallhaven-3lmrl3.png
   color = rgb(23, 39, 41)
-  blur_passes = 3
-  contrast = 0.8916
-  brightness = 0.8172
-  vibrancy = 0.1696
+  #blur_passes = 3
+    #contrast = 0.8916
+    #brightness = 0.8172
+    #vibrancy = 0.1696
   vibrancy_darkness = 0.0
 }
 
