--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,8 +8,8 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 2880x1800@120, auto, 1.25, bitdepth, 10 
-monitor = HDMI-A-1, 2560x1440@144, auto, 1
+monitor = eDP-1, 2880x1800@120, auto, 1.5
+monitor = HDMI-A-1, 2560x1440@144, auto, 1, bitdepth, 10
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
