--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 2880x1800@120, auto, 1.5
+monitor = eDP-1, 2880x1800@120, auto, 1
 monitor = HDMI-A-1, 2560x1440@144, auto, 1, bitdepth, 10
 
 
@@ -26,7 +26,7 @@ exec-once = hypridle
 
 # Set programs that you use
 $editor = nvim
-$terminal = kitty
+$terminal = ghostty
 $fileManager = nautlis
 $menu = wofi --show drun,run,dmenu
 
@@ -232,4 +232,4 @@ binde = , XF86MonBrightnessDown , exec, light -U 10 && light -O
 binde = , XF86KbdBrightnessUp, exec, light -S 100 -s sysfs/leds/spi::kbd_backlight
 binde = , XF86KbdBrightnessDown, exec, light -S 0   -s sysfs/leds/spi::kbd_backlight
 
-bindl= , switch:on:Lid Switch, exec, hyprlock && systemctl suspend
+bindl= , switch:on:Lid Switch, exec, hyprlock
