--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,9 +1,10 @@
 preload = /home/aman/Pictures/wallpapers/wallhaven-d61yjo.jpg
 preload = /home/aman/Pictures/wallpapers/wallhaven-kxmxom.jpg
+preload = /home/aman/Pictures/wallpapers/wallhaven-je8vlm.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = ,/home/aman/Pictures/wallpapers/wallhaven-kxmxom.jpg
+wallpaper = ,/home/aman/Pictures/wallpapers/wallhaven-je8vlm.jpg
 
 #enable splash text rendering over the wallpaper
 splash = false
