--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,16 +18,12 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'wl-copy'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
 
-set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
-set -g @rose_pine_host 'on'
-set -g @rose_pine_directory 'on'
-set -g @rose_pine_bar_bg_disabled_color_option 'default'
-set -g @rose_pine_bar_bg_disable 'on'
+set -g @tokyo-night-tmux_transparent 1
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'rose-pine/tmux'
+set -g @plugin 'janoamaral/tokyo-night-tmux'
 
 
 # Other examples:
