--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 2880x1800@120, auto, 1, mirror , HDMI-A-1
+monitor = eDP-1, 2880x1800@120, auto, 1, mirror , HDMI-A-1, mirror, DP-1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -106,7 +106,7 @@ decoration {
 }
 
 animations {
-    enabled = true
+    enabled = false
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -133,7 +133,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 misc {
