--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -30,5 +30,5 @@ listener {
 
 listener {
     timeout = 500                                
-    on-timeout = systemctl suspend                # suspend pc
+    on-timeout = loginctl lock-sessino
 }
