--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 2880x1800@120, auto, 1, mirror , HDMI-A-1, mirror, DP-1
+monitor = eDP-1, 2880x1800@120, auto, 1, mirror , HDMI-A-1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -66,18 +66,13 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(ebdbb2ff) rgba(ebdbb2ff) 45deg
+    col.inactive_border = rgba(928374ff)
 
     layout = dwindle
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = true
-}
-
-gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
 }
 
 cursor {
@@ -131,11 +126,6 @@ master {
     new_status = master
 }
 
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = true
-}
-
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
@@ -155,6 +145,7 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = move cursor 0 10, class:^(waybar)$, floating:1
+#windowrule = immediate, class:^(cs2)$
 #windowrulev2 = forceinput, class:.*
 
 
