--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,12 +18,12 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'wl-copy'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
 
-set -g @tokyo-night-tmux_transparent 1
+set -g @tmux-gruvbox 'dark'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'janoamaral/tokyo-night-tmux'
+set -g @plugin 'egel/tmux-gruvbox'
 
 
 # Other examples:
