--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,8 +45,8 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
     kb_rules =
+    kb_options=ctrl:nocaps
 
     follow_mouse = 1
 
