--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,25 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 2880x1800@120, auto, 1, mirror , HDMI-A-1
+monitorv2 {
+  output = HDMI-A-1
+  mode = 2560x1440@280
+  position = 0x0
+  scale = 1.25
+  bitdepth = 10
+  supports_wide_color = 1
+  supports_hdr = 1
+  cm = wide
+}
+
+monitorv2 {
+  output = eDP-1
+  mode = 2880x1800@120
+  position = 2560x0
+  scale = 1
+  mirror = HDMI-A-1
+}
+
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -132,6 +150,10 @@ misc {
     vfr = true
 }
 
+xwayland {
+    force_zero_scaling = true
+}
+
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 #device:epic-mouse-v1 {
@@ -145,7 +167,7 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = move cursor 0 10, class:^(waybar)$, floating:1
-#windowrule = immediate, class:^(cs2)$
+windowrule = immediate, class:^(cs2)$
 #windowrulev2 = forceinput, class:.*
 
 
