--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -3,6 +3,7 @@ preload = /home/aman/Pictures/wallpapers/wallhaven-kxmxom.jpg
 preload = /home/aman/Pictures/wallpapers/wallhaven-je8vlm.jpg
 preload = /home/aman/Pictures/wallpapers/wallhaven-yqmlmx.png
 preload = /home/aman/Pictures/wallpapers/wallhaven-ogx5y9.jpg
+preload = /home/aman/Pictures/wallpapers/wallhaven-oggw5p.png
 #if more than one preload is desired then continue to preload other backgrounds
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
