--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,7 +24,10 @@ monitorv2 {
   mode = 2880x1800@120
   position = 2560x0
   scale = 1
-  mirror = HDMI-A-1
+  bitdepth = 10
+  supports_wide_color = 1
+  supports_hdr = 1
+  cm = wide
 }
 
 
@@ -94,7 +97,7 @@ general {
 }
 
 cursor {
-    no_hardware_cursors = false
+    no_hardware_cursors = true
 }
 
 decoration {
