feat(tmux): hide tmux bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,6 +20,8 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl
 
 set -g @tmux-gruvbox 'dark'
 
+bind h run-shell "tmux setw -g status \$(tmux show -g -w status | grep -q off && echo on || echo off)"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
